--- a/webapitest.html
+++ b/webapitest.html
@@ -24,7 +24,16 @@
             // http://localhost/DemoApi
             
             var _UserId = null;
-
+            var _Fetch = '<fetch version="1.0" output-format="xml-platform" mapping="logical" distinct="false">' +
+  '<entity name="account">' +
+    '<attribute name="name" />    <filter type="and">' +
+      '<condition attribute="statecode" operator="eq" value="0" />' +
+    '</filter>' +
+    '<link-entity name="contact" from="contactid" to="primarycontactid" visible="false" link-type="outer" alias="accountprimarycontactidcontactcontactid">' +
+      '<attribute name="emailaddress1" />' +
+    '</link-entity>' +
+  '</entity>' +
+'</fetch>';
             String.prototype.capitalizeFirstLetter = function () {
                 return (this.length > 0) ? this.charAt(0).toUpperCase() + this.slice(1) : '';
             };
@@ -41,7 +50,7 @@
                 display.val(cur + txt);
             }
 
-            function VSuccessCallback(result) {
+            function versionNumberCallback(result) {
                 SetDisplay("Version number[" + result.Version + "]");
             }
 
@@ -49,7 +58,7 @@
                 SetDisplay("WebApi call failed\r\n" + error.message);
             }
 
-            function WSuccessCallback(result) {
+            function whoAmICallback(result) {
                 _UserId = result.UserId;
 
                 SetDisplay("User ID[" + result.UserId +
@@ -109,13 +118,82 @@
                 result.negativecurrencyformatcode + "]");
             }
 
+            function EntityAttributesCallback(result) {
+                if (result == undefined)
+                    return;
+
+                if ((result.length) && (result.length == 0))
+                    return;
+                var final = '';
+
+                for (var i = 0; i < result[0].Attributes.length; i++) {
+                    var attr = result[0].Attributes[i];
+                    final += "Schema [" + attr.SchemaName + "] attrtype [" + attr.AttributeType + "]\r\n";
+                }
+
+                SetDisplay(final);
+            }
+
+            function ManyToOneRelationshipCallback(result) {
+                if (result == undefined)
+                    return;
+
+                if ((result.length) && (result.length == 0))
+                    return;
+
+                var final = 'ManyToOneRelationshipCallback\r\n';
+                var aa = result[0].ManyToOneRelationships;
+                for (var i = 0; i < aa.length; i++) {
+                    final += "ReferencingAttribute [" + aa[i].ReferencingAttribute + "] ReferencedAttribute [" + aa[i].ReferencedAttribute + "]\r\n";
+                }
+                SetDisplay(final);
+            }
+
+            function OneToManyRelationshipCallback(result) {
+                if (result == undefined) {
+                    return;
+                }
+
+                if ((result.length) && (result.length == 0)) {
+                    return;
+                }
+
+                var final = "OneToManyRelationshipCallback\r\nReferencingAttribute [" + result[0].ReferencingAttribute + "] ReferencedAttribute [" + result[0].ReferencedAttribute + "]\r\n";
+                SetDisplay(final);
+            }
+
+            function FetchCallback(result) {
+
+                if (((result == undefined) ) || ((result.length) && (result.length == 0))) {
+                    return;
+                }
+                var final = '';
+
+                for (var i = 0; i < result.length; i++) {
+                    // accountid is returened for each result
+                    final += "Account name [" + result[i].name + "] Primary Contact email [" 
+                        + result[i].accountprimarycontactidcontactcontactid_x002e_emailaddress1 + "]\r\n";
+                }
+                SetDisplay(final);
+            }
+
             $('#cleardisplay').on('click', function (e) {
-                $('#displayresult').val();
+                $('#displayresult').val('');
                 return false;
             });
 
             $('#btngo').on('click', function (e) {
-                GetAllUserSettings();
+                //Sdk.WebAPI.versionNumber(versionNumberCallback, FailCallback);
+                Sdk.WebAPI.whoAmIFunction(whoAmICallback, FailCallback);
+
+                //Sdk.WebAPI.getEntityList(EntityListCallback, FailCallback);
+
+                //Sdk.WebAPI.GetEntityAttributes('Account', EntityAttributesCallback, FailCallback);
+
+                //Sdk.WebAPI.getOneToManyRelationships('Account', 'contact', OneToManyRelationshipCallback, FailCallback);
+                //Sdk.WebAPI.getManyToOneRelationships('Contact', ManyToOneRelationshipCallback, FailCallback);
+
+                Sdk.WebAPI.getFetchXml('accounts', _Fetch, FetchCallback, FailCallback);
                 return false;
             });
 
@@ -158,254 +236,8 @@ Source: https://msdn.microsoft.com/de-de/library/mt607990.aspx#bkmk_entityTypes
                 */
             }
 
-            //Sdk.WebAPI.versionNumber(VSuccessCallback, FailCallback);
-            Sdk.WebAPI.whoAmIFunction(WSuccessCallback, FailCallback);
-            Sdk.WebAPI.getEntityList(EntityListCallback, FailCallback);
+            console.log("DONE");
         });
-
-        /*
-        // Result of calling getEntityList
-        // except for a few, all names conform to expectations.
-Entity name[EntityDefinitions] Url [EntityDefinitions]
-Entity name[GlobalOptionSetDefinitions] Url [GlobalOptionSetDefinitions]
-Entity name[ManagedPropertyDefinitions] Url [ManagedPropertyDefinitions]
-Entity name[RelationshipDefinitions] Url [RelationshipDefinitions]
-Entity name[accountleadscollection] Url [accountleadscollection]
-Entity name[accounts] Url [accounts]
-Entity name[activitymimeattachments] Url [activitymimeattachments]
-Entity name[activityparties] Url [activityparties]
-Entity name[activitypointers] Url [activitypointers]
-Entity name[annotations] Url [annotations]
-Entity name[annualfiscalcalendars] Url [annualfiscalcalendars]
-Entity name[appointments] Url [appointments]
-Entity name[asyncoperations] Url [asyncoperations]
-Entity name[attachments] Url [attachments]
-Entity name[bookableresourcebookingheaders] Url [bookableresourcebookingheaders]
-Entity name[bookableresourcebookings] Url [bookableresourcebookings]
-Entity name[bookableresourcecategories] Url [bookableresourcecategories]
-Entity name[bookableresourcecategoryassns] Url [bookableresourcecategoryassns]
-Entity name[bookableresourcecharacteristics] Url [bookableresourcecharacteristics]
-Entity name[bookableresourcegroups] Url [bookableresourcegroups]
-Entity name[bookableresources] Url [bookableresources]
-Entity name[bookingstatuses] Url [bookingstatuses]
-Entity name[bulkdeletefailures] Url [bulkdeletefailures]
-Entity name[bulkdeleteoperations] Url [bulkdeleteoperations]
-Entity name[bulkoperationlogs] Url [bulkoperationlogs]
-Entity name[bulkoperations] Url [bulkoperations]
-Entity name[businessunitnewsarticles] Url [businessunitnewsarticles]
-Entity name[businessunits] Url [businessunits]
-Entity name[calendarrules] Url [calendarrules]
-Entity name[calendars] Url [calendars]
-Entity name[campaignactivities] Url [campaignactivities]
-Entity name[campaignactivityitems] Url [campaignactivityitems]
-Entity name[campaignitems] Url [campaignitems]
-Entity name[campaignresponses] Url [campaignresponses]
-Entity name[campaigns] Url [campaigns]
-Entity name[categories] Url [categories]
-Entity name[channelaccessprofileentityaccesslevels] Url [channelaccessprofileentityaccesslevels]
-Entity name[characteristics] Url [characteristics]
-Entity name[competitoraddresses] Url [competitoraddresses]
-Entity name[competitorproducts] Url [competitorproducts]
-Entity name[competitors] Url [competitors]
-Entity name[competitorsalesliteratures] Url [competitorsalesliteratures]
-Entity name[complexcontrols] Url [complexcontrols]
-Entity name[connectionroleassociations] Url [connectionroleassociations]
-Entity name[connectionroles] Url [connectionroles]
-Entity name[connections] Url [connections]
-Entity name[constraintbasedgroups] Url [constraintbasedgroups]
-Entity name[contactinvoicescollection] Url [contactinvoicescollection]
-Entity name[contactleadscollection] Url [contactleadscollection]
-Entity name[contactorderscollection] Url [contactorderscollection]
-Entity name[contactquotescollection] Url [contactquotescollection]
-Entity name[contacts] Url [contacts]
-Entity name[contractdetails] Url [contractdetails]
-Entity name[contracts] Url [contracts]
-Entity name[contracttemplates] Url [contracttemplates]
-Entity name[customcontroldefaultconfigs] Url [customcontroldefaultconfigs]
-Entity name[customcontrolresources] Url [customcontrolresources]
-Entity name[customcontrols] Url [customcontrols]
-Entity name[customeraddresses] Url [customeraddresses]
-Entity name[dataperformances] Url [dataperformances]
-Entity name[dcrmeg_dcrmegconfigurations] Url [dcrmeg_dcrmegconfigurations]
-Entity name[dcrmeg_dcrmegtranslations] Url [dcrmeg_dcrmegtranslations]
-Entity name[dependencies] Url [dependencies]
-Entity name[discounts] Url [discounts]
-Entity name[discounttypes] Url [discounttypes]
-Entity name[documenttemplates] Url [documenttemplates]
-Entity name[duplicaterecords] Url [duplicaterecords]
-Entity name[duplicateruleconditions] Url [duplicateruleconditions]
-Entity name[duplicaterules] Url [duplicaterules]
-Entity name[emails] Url [emails]
-Entity name[emailserverprofiles] Url [emailserverprofiles]
-Entity name[entitlementchannels] Url [entitlementchannels]
-Entity name[entitlementcontactscollection] Url [entitlementcontactscollection]
-Entity name[entitlementproductscollection] Url [entitlementproductscollection]
-Entity name[entitlements] Url [entitlements]
-Entity name[entitlementtemplatechannels] Url [entitlementtemplatechannels]
-Entity name[entitlementtemplateproductscollection] Url [entitlementtemplateproductscollection]
-Entity name[entitlementtemplates] Url [entitlementtemplates]
-Entity name[equipments] Url [equipments]
-Entity name[exchangesyncidmappings] Url [exchangesyncidmappings]
-Entity name[faxes] Url [faxes]
-Entity name[feedback] Url [feedback]
-Entity name[fieldpermissions] Url [fieldpermissions]
-Entity name[fieldsecurityprofiles] Url [fieldsecurityprofiles]
-Entity name[fixedmonthlyfiscalcalendars] Url [fixedmonthlyfiscalcalendars]
-Entity name[goalrollupqueries] Url [goalrollupqueries]
-Entity name[goals] Url [goals]
-Entity name[importdataset] Url [importdataset]
-Entity name[importentitymappings] Url [importentitymappings]
-Entity name[importfiles] Url [importfiles]
-Entity name[importjobs] Url [importjobs]
-Entity name[importlogs] Url [importlogs]
-Entity name[importmaps] Url [importmaps]
-Entity name[imports] Url [imports]
-Entity name[incidentknowledgebaserecords] Url [incidentknowledgebaserecords]
-Entity name[incidentresolutions] Url [incidentresolutions]
-Entity name[incidents] Url [incidents]
-Entity name[invaliddependencies] Url [invaliddependencies]
-Entity name[invoicedetails] Url [invoicedetails]
-Entity name[invoices] Url [invoices]
-Entity name[kbarticlecomments] Url [kbarticlecomments]
-Entity name[kbarticles] Url [kbarticles]
-Entity name[kbarticletemplates] Url [kbarticletemplates]
-Entity name[knowledgearticlecategories] Url [knowledgearticlecategories]
-Entity name[knowledgearticleincidents] Url [knowledgearticleincidents]
-Entity name[knowledgearticles] Url [knowledgearticles]
-Entity name[knowledgearticleviews] Url [knowledgearticleviews]
-Entity name[knowledgebaserecords] Url [knowledgebaserecords]
-Entity name[languagelocale] Url [languagelocale]
-Entity name[leadaddresses] Url [leadaddresses]
-Entity name[leadcompetitorscollection] Url [leadcompetitorscollection]
-Entity name[leadproducts] Url [leadproducts]
-Entity name[leads] Url [leads]
-Entity name[letters] Url [letters]
-Entity name[listmembers] Url [listmembers]
-Entity name[lists] Url [lists]
-Entity name[mailboxes] Url [mailboxes]
-Entity name[mailmergetemplates] Url [mailmergetemplates]
-Entity name[metrics] Url [metrics]
-Entity name[mobileofflineprofileitemassociations] Url [mobileofflineprofileitemassociations]
-Entity name[mobileofflineprofileitems] Url [mobileofflineprofileitems]
-Entity name[mobileofflineprofiles] Url [mobileofflineprofiles]
-Entity name[monthlyfiscalcalendars] Url [monthlyfiscalcalendars]
-Entity name[new_atests] Url [new_atests]
-Entity name[officegraphdocuments] Url [officegraphdocuments]
-Entity name[opportunities] Url [opportunities]
-Entity name[opportunitycloses] Url [opportunitycloses]
-Entity name[opportunitycompetitorscollection] Url [opportunitycompetitorscollection]
-Entity name[opportunityproducts] Url [opportunityproducts]
-Entity name[ordercloses] Url [ordercloses]
-Entity name[organizations] Url [organizations]
-Entity name[personaldocumenttemplates] Url [personaldocumenttemplates]
-Entity name[phonecalls] Url [phonecalls]
-Entity name[pluginassemblies] Url [pluginassemblies]
-Entity name[plugintracelogs] Url [plugintracelogs]
-Entity name[plugintypes] Url [plugintypes]
-Entity name[positions] Url [positions]
-Entity name[postcomments] Url [postcomments]
-Entity name[postfollows] Url [postfollows]
-Entity name[postlikes] Url [postlikes]
-Entity name[postregardings] Url [postregardings]
-Entity name[posts] Url [posts]
-Entity name[pricelevels] Url [pricelevels]
-Entity name[principalentitymaps] Url [principalentitymaps]
-Entity name[principalobjectaccessset] Url [principalobjectaccessset]
-Entity name[privileges] Url [privileges]
-Entity name[productassociations] Url [productassociations]
-Entity name[productpricelevels] Url [productpricelevels]
-Entity name[products] Url [products]
-Entity name[productsalesliteratures] Url [productsalesliteratures]
-Entity name[productsubstitutes] Url [productsubstitutes]
-Entity name[publisheraddresses] Url [publisheraddresses]
-Entity name[publishers] Url [publishers]
-Entity name[quarterlyfiscalcalendars] Url [quarterlyfiscalcalendars]
-Entity name[queueitems] Url [queueitems]
-Entity name[queuememberships] Url [queuememberships]
-Entity name[queues] Url [queues]
-Entity name[quotecloses] Url [quotecloses]
-Entity name[quotedetails] Url [quotedetails]
-Entity name[quotes] Url [quotes]
-Entity name[ratingmodels] Url [ratingmodels]
-Entity name[ratingvalues] Url [ratingvalues]
-Entity name[recommendeddocuments] Url [recommendeddocuments]
-Entity name[recurringappointmentmasters] Url [recurringappointmentmasters]
-Entity name[reportcategories] Url [reportcategories]
-Entity name[reports] Url [reports]
-Entity name[resourcegroups] Url [resourcegroups]
-Entity name[resources] Url [resources]
-Entity name[resourcespecs] Url [resourcespecs]
-Entity name[roleprivilegescollection] Url [roleprivilegescollection]
-Entity name[roles] Url [roles]
-Entity name[roletemplateprivilegescollection] Url [roletemplateprivilegescollection]
-Entity name[roletemplates] Url [roletemplates]
-Entity name[salesliteratureitems] Url [salesliteratureitems]
-Entity name[salesliteratures] Url [salesliteratures]
-Entity name[salesorderdetails] Url [salesorderdetails]
-Entity name[salesorders] Url [salesorders]
-Entity name[savedqueries] Url [savedqueries]
-Entity name[savedqueryvisualizations] Url [savedqueryvisualizations]
-Entity name[sdkmessagefilters] Url [sdkmessagefilters]
-Entity name[sdkmessageprocessingstepimages] Url [sdkmessageprocessingstepimages]
-Entity name[sdkmessageprocessingsteps] Url [sdkmessageprocessingsteps]
-Entity name[sdkmessageprocessingstepsecureconfigs] Url [sdkmessageprocessingstepsecureconfigs]
-Entity name[sdkmessages] Url [sdkmessages]
-Entity name[semiannualfiscalcalendars] Url [semiannualfiscalcalendars]
-Entity name[serviceappointments] Url [serviceappointments]
-Entity name[servicecontractcontactscollection] Url [servicecontractcontactscollection]
-Entity name[serviceendpoints] Url [serviceendpoints]
-Entity name[services] Url [services]
-Entity name[sharepointdocumentlocations] Url [sharepointdocumentlocations]
-Entity name[sharepointsites] Url [sharepointsites]
-Entity name[similarityrules] Url [similarityrules]
-Entity name[sites] Url [sites]
-Entity name[slaitems] Url [slaitems]
-Entity name[slakpiinstances] Url [slakpiinstances]
-Entity name[slas] Url [slas]
-Entity name[socialactivities] Url [socialactivities]
-Entity name[socialprofiles] Url [socialprofiles]
-Entity name[solutioncomponents] Url [solutioncomponents]
-Entity name[solutions] Url [solutions]
-Entity name[subjects] Url [subjects]
-Entity name[subscriptionmanuallytrackedobjects] Url [subscriptionmanuallytrackedobjects]
-Entity name[subscriptionstatisticsofflineset] Url [subscriptionstatisticsofflineset]
-Entity name[subscriptionstatisticsoutlookset] Url [subscriptionstatisticsoutlookset]
-Entity name[subscriptionsyncentriesoffline] Url [subscriptionsyncentriesoffline]
-Entity name[subscriptionsyncentriesoutlook] Url [subscriptionsyncentriesoutlook]
-Entity name[syncerrors] Url [syncerrors]
-Entity name[systemforms] Url [systemforms]
-Entity name[systemuserlicensescollection] Url [systemuserlicensescollection]
-Entity name[systemuserprofilescollection] Url [systemuserprofilescollection]
-Entity name[systemuserrolescollection] Url [systemuserrolescollection]
-Entity name[systemusers] Url [systemusers]
-Entity name[systemusersyncmappingprofilescollection] Url [systemusersyncmappingprofilescollection]
-Entity name[tasks] Url [tasks]
-Entity name[teammemberships] Url [teammemberships]
-Entity name[teamprofilescollection] Url [teamprofilescollection]
-Entity name[teamrolescollection] Url [teamrolescollection]
-Entity name[teams] Url [teams]
-Entity name[teamsyncattributemappingprofilescollection] Url [teamsyncattributemappingprofilescollection]
-Entity name[teamtemplates] Url [teamtemplates]
-Entity name[templates] Url [templates]
-Entity name[territories] Url [territories]
-Entity name[themes] Url [themes]
-Entity name[timestampdatemappings] Url [timestampdatemappings]
-Entity name[timezonedefinitions] Url [timezonedefinitions]
-Entity name[timezonelocalizednames] Url [timezonelocalizednames]
-Entity name[timezonerules] Url [timezonerules]
-Entity name[tracelogs] Url [tracelogs]
-Entity name[transactioncurrencies] Url [transactioncurrencies]
-Entity name[uoms] Url [uoms]
-Entity name[uomschedules] Url [uomschedules]
-Entity name[userforms] Url [userforms]
-Entity name[userqueries] Url [userqueries]
-Entity name[userqueryvisualizations] Url [userqueryvisualizations]
-Entity name[usersettingscollection] Url [usersettingscollection]
-Entity name[webresourceset] Url [webresourceset]
-Entity name[webwizards] Url [webwizards]
-Entity name[workflowlogs] Url [workflowlogs]
-Entity name[workflows] Url [workflows]
-        */
 
     </script>
 
