--- a/DCrmEditableGridIHtml.html
+++ b/DCrmEditableGridIHtml.html
@@ -24,6 +24,7 @@
     <script src="dcrmeg_pdfmake"></script>
     <!-- pdfmakefonts -->
     <script src="dcrmeg_pdfmakefonts"></script>
+    <!--<script src="dcrmeg_webapisdk"></script>-->
     <!-- dcrmeditabletablegrid -->
     <script src="dcrmeg_dcrmeg"></script>
 
