--- a/configformhtml.html
+++ b/configformhtml.html
@@ -175,6 +175,14 @@
                         </select>
                     </div>
                 </div>
+                <div class="group">
+                    <div class="col span_2_of_3">
+                        <label id="gridtitlelabel" class="ElipseText" for="gridtitle">Grid Title</label>
+                    </div>
+                    <div class="col span_1_of_4">
+                        <input type="text" id="gridtitle" />
+                    </div>
+                </div>
             </div>
 
         </div>
