--- a/configformhtml.html
+++ b/configformhtml.html
@@ -72,10 +72,63 @@
             </div>
 
             <div class="col span_3_of_7">
+
                 <div class="ollistofentitiescontainer">
                     <div><span id="dcrmeg_displaydatafromentity_copy">Selected entities to display data from</span> <span class="Required">*</span></div>
                     <ol id="makesortable" class="ollistofentities"></ol>
                 </div>
+
+                <div id="maincontentsect51" class="displaynone" style="border-left: solid 3px lightgray;padding-left:10px;">
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label id="displayclearfilterbuttonlabel" class="ElipseText" for="displayclearfilterbutton">Display clear filters button</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="checkbox" checked="checked" id="displayclearfilterbutton" />
+                        </div>
+                    </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label id="displayheaderfilterlabel" class="ElipseText" for="displayheaderfilter">Display grid header filter</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="checkbox" checked="checked" id="displayheaderfilter" />
+                        </div>
+                    </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label id="displayexportbuttonlabel" class="ElipseText" for="displayexportbutton">Display export button</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="checkbox" checked="checked" id="displayexportbutton" />
+                        </div>
+                    </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label id="displaysetrecordstatelabel" class="ElipseText" for="displaysetrecordstate">Display set record status context menu</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="checkbox" checked="checked" id="displaysetrecordstate" />
+                        </div>
+                    </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label id="displayclonerecordbuttonlabel" class="ElipseText" for="displayclonerecordbutton">Display clone record button</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="checkbox" checked="checked" id="displayclonerecordbutton" />
+                        </div>
+                    </div>
+                    <div class="group">
+                        <div class="col span_2_of_3">
+                            <label id="displayclonerecordlabel" class="ElipseText" for="displayclonerecord">Display clone record context menu</label>
+                        </div>
+                        <div class="col span_1_of_4">
+                            <input type="checkbox" checked="checked" id="displayclonerecord" />
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="col span_2_of_7 conditionfetchcontainer displaynone" id="maincontentsect5">
@@ -135,7 +188,6 @@
                         <input type="checkbox" checked="checked" id="displaySum" />
                     </div>
                 </div>
-
                 <div class="group">
                     <div class="col span_2_of_3">
                         <label for="createnewbtnclick" class="ElipseText" id="createnewbtnclick_label">New button (+) behavior</label>
@@ -148,7 +200,6 @@
                         </select>
                     </div>
                 </div>
-
                 <div class="group">
                     <div class="col span_2_of_3">
                         <label for="booleaneditorbehaviour" class="ElipseText" id="booleaneditorbehaviour_label">Boolean editor behavior</label>
@@ -160,7 +211,6 @@
                         </select>
                     </div>
                 </div>
-
                 <div class="group">
                     <div class="col span_2_of_3">
                         <label for="maxrecordperpage" class="ElipseText" id="dcrmeg_maxrecordsperpage">Max records per page</label>
@@ -183,6 +233,7 @@
                         <input type="text" id="gridtitle" />
                     </div>
                 </div>
+
             </div>
 
         </div>
